2008-09-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, include/bsp.h: Review of all bsp_cleanup()
	implementations. In this phase, all prototypes were removed from
	bsp.h and empty implementations were removed and made to use the
	shared stub.
	* startup/bspclean.c: Removed.

2008-09-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* spi/mc68360_spidrv.c: Convert to "bool".

2008-09-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* spi/m360_spi.c, timer/timer.c: Convert to "bool".

2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>

	* timer/timer.c: Eliminate empty function from every benchmark timer
	driver. Fix spelling.

2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>

	* timer/timer.c: Rename timer driver methods to follow RTEMS
	programming conventions.

2008-08-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* clock/clock.c: Move extern outside of braces.

2008-07-09	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* Makefile.am, spi/m360_spidrv.c, spi/m360_spidrv.h:
	added SPI driver

2008-07-09	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* README:
	added pgh360 BSP variant

2008-05-23	Joel Sherrill <joel.sherrill@OARcorp.com>

	* console/console.c: Eliminate copies of switches to convert termios
	Bxxx constants to xxx as an integer. Use the shared
	termios_baud_to_number() routine to do the same conversion.

2008-05-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am: Rework to avoid .rel files.

2008-05-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c: Refactored and renamed initialization routines to
	rtems_initialize_data_structures, rtems_initialize_before_drivers,
	rtems_initialize_device_drivers, and
	rtems_initialize_start_multitasking. This opened the sequence up so
	that bootcard() could provide a more robust and flexible framework
	which is easier to explain and understand. This also lays the
	groundwork for sharing the division of available memory between the