@@ -1,3 +1,11 @@
+2008-09-16	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* Makefile.am, configure.ac, start/start.S: Add use of
+	bsp_get_work_area() in its own file and rely on BSP Framework to
+	perform more initialization. Remove unnecessary includes of
+	rtems/libio.h and rtems/libcsupport.h.
+	* startup/bspstart.c: Removed.
+
 2008-09-10	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* Makefile.am, include/bsp.h: Review of all bsp_cleanup()
